--- a/src/static/partials/polls.html
+++ b/src/static/partials/polls.html
@@ -1,4 +1,5 @@
 <div class="container" ng-controller="ListPolls">
+  <h1>Polls</h1>
   <p>{{message}}</p>
   <ul>
     <li ng-repeat="poll in polls">
