--- a/src/static/partials/polls.html
+++ b/src/static/partials/polls.html
@@ -1,4 +1,7 @@
 <div class="container" ng-controller="ListPolls">
+  <ol class="breadcrumb">
+    <li class="active">Polls</li>
+  </ol>
   <h1>Polls</h1>
   <p>{{message}}</p>
   <ul>
