--- a/src/static/partials/poll.html
+++ b/src/static/partials/poll.html
@@ -7,14 +7,14 @@
   <button type="button" class="btn btn-danger" ng-click="deletePoll()">
     Delete
   </button>
-  <ul>
-    <li ng-repeat="question in poll.questions">
+  <ol>
+    <li class="question" ng-repeat="question in poll.questions">
       <p>{{question.content}}</p>
-      <ul>
-        <li ng-repeat="answer in question.answers">
+      <ol>
+        <li class="answer" ng-repeat="answer in question.answers">
           {{answer.content}}
         </li>
-      </ul>
+      </ol>
     </li>
-  </ul>
+  </ol>
 </div>
