--- a/src/static/index.css
+++ b/src/static/index.css
@@ -2,6 +2,12 @@ body {
     padding-top: 50px;
 }
 
+button.poll-action {
+    bottom: 20px;
+    position: relative;
+    top: 20px;
+}
+
 li.answer {
     list-style-position: inside;
     list-style-type: none;
