--- a/src/static/partials/poll.html
+++ b/src/static/partials/poll.html
@@ -3,10 +3,11 @@
     <li><a href="#/polls">Polls</a></li>
     <li class="active">{{poll.title}}</li>
   </ol>
-  <h1>{{poll.title}}</h1>
-  <button type="button" class="btn btn-danger" ng-click="deletePoll()">
+  <h1 class="pull-left">{{poll.title}}</h1>
+  <button type="button" class="btn btn-danger pull-right poll-action" ng-click="deletePoll()">
     Delete
   </button>
+  <div class="clearfix"></div>
   <ol>
     <li class="question" ng-repeat="question in poll.questions">
       <p>{{question.content}}</p>
