--- a/src/static/index.css
+++ b/src/static/index.css
@@ -14,6 +14,11 @@ li.answer {
     margin-bottom: 10px;
 }
 
+li.poll {
+    font-size: 18px;
+    margin: 10px 0px;
+}
+
 li.question {
     border-bottom: 1px solid #ccc;
     list-style-position: inside;
