--- a/src/static/partials/poll.html
+++ b/src/static/partials/poll.html
@@ -4,7 +4,7 @@
     <li class="active">{{poll.title}}</li>
   </ol>
   <h1 class="pull-left">{{poll.title}}</h1>
-  <button type="button" class="btn btn-danger pull-right poll-action" ng-click="deletePoll()">
+  <button type="button" class="btn btn-danger pull-right poll-action" poleland-confirm="deletePoll()">
     Delete
   </button>
   <div class="clearfix"></div>
