Add confirm when deleting poll on polls page

--- a/src/static/partials/polls.html
+++ b/src/static/partials/polls.html
@@ -7,7 +7,7 @@
     <li class="poll" ng-repeat="poll in polls">
       <a href="#/polls/{{poll.anchorHref}}">{{poll.title}}</a>
       <button type="button" class="btn btn-danger pull-right"
-              ng-click="deletePoll(poll.href)">
+              poleland-confirm="deletePoll(poll.href)">
         Delete
       </button>
       <div class="clearfix"></div>
