Add ability to delete answers

--- a/src/static/partials/poll.html
+++ b/src/static/partials/poll.html
@@ -14,6 +14,9 @@
       <ol>
         <li class="answer" ng-repeat="answer in question.answers">
           {{answer.content}}
+          <span class="glyphicon glyphicon-remove delete"
+                ng-click="deleteAnswer(question.id, answer.id)">
+          </span>
         </li>
       </ol>
     </li>
