--- a/src/static/partials/poll.html
+++ b/src/static/partials/poll.html
@@ -22,4 +22,5 @@
     </li>
   </ol>
   <button type="button" class="btn btn-primary" ng-click="save()">Save</button>
+  <button type="button" class="btn btn-default" ng-click="back()">Back</button>
 </div>
