--- a/src/static/partials/poll.html
+++ b/src/static/partials/poll.html
@@ -22,5 +22,8 @@
     </li>
   </ol>
   <button type="button" class="btn btn-primary" ng-click="save()">Save</button>
+  <button type="button" class="btn btn-primary" ng-click="apply()">
+    Apply
+  </button>
   <button type="button" class="btn btn-default" ng-click="back()">Back</button>
 </div>
