Wrap delete in a button

--- a/src/static/partials/poll.html
+++ b/src/static/partials/poll.html
@@ -14,9 +14,10 @@
       <ol>
         <li class="answer" ng-repeat="answer in question.answers">
           {{answer.content}}
-          <span class="glyphicon glyphicon-remove delete"
-                ng-click="deleteAnswer(question.id, answer.id)">
-          </span>
+          <button type="button" class="btn btn-link"
+                  ng-click="deleteAnswer(question.id, answer.id)">
+            <span class="glyphicon glyphicon-remove delete"></span>
+          </button>
         </li>
       </ol>
     </li>
