Try to make delete button accessible

--- a/src/static/partials/poll.html
+++ b/src/static/partials/poll.html
@@ -17,6 +17,7 @@
           <button type="button" class="btn btn-link"
                   ng-click="deleteAnswer(question.id, answer.id)">
             <span class="glyphicon glyphicon-remove delete"></span>
+            <span class="sr-only">Delete answer</span>
           </button>
         </li>
       </ol>
