Add ability to add new answers

--- a/src/static/partials/poll.html
+++ b/src/static/partials/poll.html
@@ -21,6 +21,7 @@
           </button>
         </li>
       </ol>
+      <poleland-add add-to="question.answers" text="Add answer" />
     </li>
   </ol>
   <button type="button" class="btn btn-primary" ng-click="save()">Save</button>
