--- a/src/static/partials/poll.html
+++ b/src/static/partials/poll.html
@@ -11,10 +11,10 @@
   <ol>
     <li class="question" ng-repeat="question in poll.questions">
       <p>{{question.content}}</p>
-      <ol>
+      <ol ui-sortable="sortableOptions" ng-model="question.answers">
         <li class="answer" ng-repeat="answer in question.answers">
           {{answer.content}}
-          <button type="button" class="btn btn-link">
+          <button type="button" class="btn btn-link move">
             <span class="glyphicon glyphicon-move move"></span>
             <span class="sr-only">Move answer</span>
           </button>
