--- a/src/static/partials/poll.html
+++ b/src/static/partials/poll.html
@@ -31,9 +31,9 @@
             <span class="glyphicon glyphicon-arrow-down"></span>
             <span class="sr-only">Move answer down</span>
           </button>
-          <button title="Delete" type="button" class="btn btn-link"
+          <button title="Delete" type="button" class="btn btn-link delete"
                   ng-click="deleteAnswer(question.id, answer.id)">
-            <span class="glyphicon glyphicon-remove delete"></span>
+            <span class="glyphicon glyphicon-remove"></span>
             <span class="sr-only">Delete answer</span>
           </button>
         </li>
