--- a/src/static/partials/poll.html
+++ b/src/static/partials/poll.html
@@ -11,6 +11,18 @@
   <ol>
     <li class="question" ng-repeat="question in poll.questions">
       {{question.content}}
+      <button title="Edit question" type="button" class="btn btn-link"
+              ng-click="editQuestion(question.id)"
+              ng-hide="isEditingQuestion(question.id)">
+        <span class="glyphicon glyphicon-edit"></span>
+        <span class="sr-only">Edit question</span>
+      </button>
+      <button title="Done editing" type="button" class="btn btn-link"
+              ng-click="doneEditingQuestion(question.id)"
+              ng-show="isEditingQuestion(question.id)">
+        <span class="glyphicon glyphicon-ok"></span>
+        <span class="sr-only">Done editing question</span>
+      </button>
       <button title="Move up" type="button" class="btn btn-link move-arrow"
               ng-click="moveQuestionUp(question.id)"
               ng-disabled="!canMoveQuestionUp(question.id)">
@@ -31,25 +43,29 @@
       <ol ui-sortable="sortableOptions" ng-model="question.answers">
         <li class="answer" ng-repeat="answer in question.answers">
           {{answer.content}}
-          <button title="Move" type="button" class="btn btn-link move">
+          <button title="Move" type="button" class="btn btn-link move"
+                  ng-show="isEditingQuestion(question.id)">
             <span class="glyphicon glyphicon-move move"></span>
             <span class="sr-only">Move answer</span>
           </button>
           <button title="Move up" type="button" class="btn btn-link move-arrow"
                   ng-click="moveAnswerUp(question.id, answer.id)"
-                  ng-disabled="!canMoveAnswerUp(question.id, answer.id)">
+                  ng-disabled="!canMoveAnswerUp(question.id, answer.id)"
+                  ng-show="isEditingQuestion(question.id)">
             <span class="glyphicon glyphicon-arrow-up"></span>
             <span class="sr-only">Move answer up</span>
           </button>
           <button title="Move down" type="button"
                   class="btn btn-link move-arrow"
                   ng-click="moveAnswerDown(question.id, answer.id)"
-                  ng-disabled="!canMoveAnswerDown(question.id, answer.id)">
+                  ng-disabled="!canMoveAnswerDown(question.id, answer.id)"
+                  ng-show="isEditingQuestion(question.id)">
             <span class="glyphicon glyphicon-arrow-down"></span>
             <span class="sr-only">Move answer down</span>
           </button>
           <button title="Delete" type="button" class="btn btn-link delete"
-                  ng-click="deleteAnswer(question.id, answer.id)">
+                  ng-click="deleteAnswer(question.id, answer.id)"
+                  ng-show="isEditingQuestion(question.id)">
             <span class="glyphicon glyphicon-remove"></span>
             <span class="sr-only">Delete answer</span>
           </button>
