Switch things over to use DynamoDB

--- a/ui/static/partials/polls.html
+++ b/ui/static/partials/polls.html
@@ -14,4 +14,7 @@
       <div class="clearfix"></div>
     </li>
   </ul>
+  <button class="btn btn-link" ng-if="loadMoreHref" ng-click="loadMorePolls()">
+    Load more
+  </button>
 </div>
