--- a/provisioning/env_vars.sh.j2
+++ b/provisioning/env_vars.sh.j2
@@ -2,4 +2,4 @@
 
 export AWS_ACCESS_KEY_ID={{ aws_access_key_id }}
 export AWS_SECRET_ACCESS_KEY={{ aws_secret_access_key }}
-export DYNAMO_DB_PREFIX=dev
+export DYNAMO_DB_PREFIX=poleland_dev
